--- a/css/slides.custom.css
+++ b/css/slides.custom.css
@@ -44,6 +44,9 @@ a:hover {
 .deck-container ol {
   font-size: 1.1em;
 }
+.slide li {
+  padding: 0;
+}
 
 .deck-container .slide p {
   margin-bottom: 0.5em;
@@ -80,7 +83,6 @@ div a,
   text-decoration: none;
   padding: 0 0.1em;
   background: rgba(200,200,200,0.5);
-  text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
   border-radius: 0.2em;
 
   -webkit-transition: 0.5s;
@@ -91,7 +93,10 @@ div a,
 }
 
 div a:hover {
-    background: rgba(50,50,50,1);
-    color: #cfcfcf;
-    text-shadow: -1px -1px 2px rgba(25,25,25,0.5);
+  background: rgba(50,50,50,1);
+  color: #cfcfcf;
+}
+
+.slide code {
+  font-size: 0.85em;
 }
