--- a/layout.jade
+++ b/layout.jade
@@ -12,7 +12,7 @@ html.no-js(lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 
-    title Deck.js Starter
+    title Underscore Chain
     meta(name='description', content='')
     meta(name='viewport', content='width=1024, user-scalable=no')
 
@@ -44,11 +44,6 @@ html.no-js(lang='en')
     script(src="js/vendor/modernizr.custom.js")
 
   body
-
-    //- a(href="https://github.com/ryan-roemer/deck.js-starter"
-    //-  style="position: absolute; top: 0; right: 0; border: 0;")
-    //-  img(src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
-    //-      alt="Fork me on GitHub")
 
     //- -----------------------------------------------------------------------
     //- Slides.
@@ -83,14 +78,13 @@ html.no-js(lang='en')
     //- JavaScript
     //- -----------------------------------------------------------------------
     // Required JS files.
-    script(src="js/vendor/jquery-1.8.2.min.js")
-    script(src="js/vendor/coffee-script-1.4.0.min.js")
+    script(src="js/vendor/jquery-1.10.2.min.js")
+    script(src="js/vendor/underscore-1.5.2.min.js")
     script(src="core/deck.core.js")
 
-    // Plugin: CodeMirror (with CoffeeScript enhancements).
+    // Plugin: CodeMirror.
     script(src="plugins/codemirror/codemirror.js")
     script(src="plugins/codemirror/mode/javascript/javascript.js")
-    script(src="plugins/codemirror/mode/coffeescript/coffeescript.js")
     script(src="plugins/codemirror/deck.codemirror.js")
 
     // Extension JS files. Add or remove as needed.
@@ -129,7 +123,8 @@ html.no-js(lang='en')
             theme: "elegant",
             indentUnit: 2,
             indentWithTabs: false,
-            runnable: false
+            runnable: false,
+            globals: [_]
           }
         });
       });
