--- a/index.jade
+++ b/index.jade
@@ -112,6 +112,6 @@ block slides
       Read more about `chain` at:
       [http://underscorejs.org/#chain](http://underscorejs.org/#chain)
 
-      [http://formidablelabs.github.io/underscore-chain-talk](formidablelabs.github.io/underscore-chain-talk)
+      [formidablelabs.github.io/underscore-chain-talk](http://formidablelabs.github.io/underscore-chain-talk)
 
-      [https://github.com/FormidableLabs/underscore-chain-talk](github.com/FormidableLabs/underscore-chain-talk)
+      [github.com/FormidableLabs/underscore-chain-talk](https://github.com/FormidableLabs/underscore-chain-talk)
