Add a practical example.

--- a/index.jade
+++ b/index.jade
@@ -91,6 +91,37 @@ block slides
       console.log("results: ", ret);
     //-
 
+  section.slide#practical
+    :markdown
+      ## A Practical Example
+
+    textarea.code#code(name="code", mode="javascript", runnable="true", style="display: none;").
+      var obj = {"Foo-Item": "a", "Foo-Customer": "b", "Bar-Item": "c"},
+        keys = ["Customer", "CustomerCart", "Item"];
+
+      var _iter = function () {
+        var count = 0;
+        for (var idx = 0; idx < keys.length; idx++) {
+          for (var key in obj) {
+            if (obj.hasOwnProperty(key) && key === "Foo-" + keys[idx]) {
+              count++;
+            }
+          }
+        }
+        return count;
+      }
+
+      var _chain = function () {
+        return _.chain(keys)
+          .filter(function (k) { return _.has(obj, "Foo-" + k); })
+          .reduce(function (m) { return m + 1; }, 0)
+          .value();
+      }
+
+      console.log("_iter:  " + _iter());
+      console.log("_chain: " + _chain());
+    //-
+
   section.slide#reduce
     :markdown
       ## And Everything Else!
